src/tests/data/TypeErrors/IntPlusBool.c

#include <stdio.h>

int main()
{
	int a = 1 + (1 == 1);   // ERROR
	return 0;
}